test/valid/mutability/mutable-assign-app.js
function f(x) { return x; }

var x = 0;

x = f(3);

f('a');
